Fixed Overflow Issues and Strok

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,6 +9,7 @@
 body {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
+  overflow: hidden;
 }
 
 .react-tabs__tab--selected button {
